<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragment.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:padding="20dp"
        app:lottie_rawRes="@raw/user_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        android:layout_marginTop="0dp"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="LogIn"
        android:textColor="#918E8E"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintLeft_toLeftOf="@id/passwordTIL"
        app:layout_constraintRight_toRightOf="@id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/purple"
        app:startIconDrawable="@drawable/person"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEDT"
            android:background="@drawable/edit_text_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:inputType="text"
            android:layout_marginEnd="30dp"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="password"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxStrokeColor="@color/purple"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEDT"
            android:background="@drawable/edit_text_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintLeft_toLeftOf="@id/passwordTIL"
        app:layout_constraintRight_toRightOf="@id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@id/passwordTIL"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/passwordTIL"
        app:layout_constraintRight_toRightOf="@id/passwordTIL"
        android:textColor="@color/grey"
        android:textSize="14sp"/>



    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/passwordTIL"
        app:layout_constraintRight_toRightOf="@id/passwordTIL"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/social_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/passwordTIL"
        app:layout_constraintRight_toRightOf="@id/passwordTIL"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        android:layout_marginTop="50dp"
        android:textColor="@color/grey"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/facebook"
            android:layout_marginEnd="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>