<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragment.WelcomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:lottie_rawRes="@raw/communicating"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/language_translator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/language_translator"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <TextView
        android:id="@+id/bulk_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:elevation="8dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bulk_text"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_translator" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#9A43B0"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



